# scorechat

./: .env.example  .gitignore  README.md  docker-compose.yml  download_beethoven_piano_sonatas.py  download_scores.py  index_scores.py  ingest_scores.py  pyproject.toml  requirements.txt  scorechat_app.py  server.py
agents/: data_agent.py  orchestrator.py  research_agent.py
analysis/: analyzer.py
chains/: extraction_chain.py  rag_chain.py  summarization_chain.py
data/: beethoven_piano_sonata_no_32_in_c_minor.musicxml  frsm_scores.csv  op111.csv
data/mei/: beethoven_piano_sonata_no_32_in_c_minor.mei
db/: models.py  schema.sql  session.py  store.py
frontend/: index.html  score_viewer.html
ingest/: omr.py
pipeline/: chat.py  embedder.py  ingest_pipeline.py  mei_converter.py  providers.py  retrieval.py
tests/: test_analyzer.py
