[project]
name = "scorechat"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Score analysis
    "music21>=9.1.0",
    # Embeddings + LLM
    "openai>=1.30.0",
    # Vector store
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    # PDF / image utilities
    "pymupdf>=1.24.0",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    # App
    "streamlit>=1.35.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# OMR engines — install whichever you use
oemer     = ["oemer>=0.1.7"]
verovio   = ["verovio>=3.15.0"]   # also needed for MEI export
dev       = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]

[project.scripts]
download-scores = "download_scores:main"
ingest-scores   = "ingest_scores:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analysis", "db", "ingest", "pipeline", "frontend"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
