[project]
name = "scorechat"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Score analysis
    "music21>=9.1.0",
    # Embeddings + LLM
    "openai>=1.30.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    # Vector store
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    # Rendering & Conversion
    "verovio>=3.15.0",
    # App
    "streamlit>=1.35.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Model providers — install whichever CHAT_PROVIDER/EMBEDDING_PROVIDER you set (see .env.example)
anthropic = ["langchain-anthropic>=0.3.0"]
ollama    = ["langchain-ollama>=0.3.0"]
dev       = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]

[project.scripts]
download-beethoven-sonatas = "download_beethoven_piano_sonatas:main"
ingest-scores              = "ingest_scores:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analysis", "db", "pipeline", "frontend"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
